# metrovector

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  devenv.nix  lcov.info
.github/workflows/: ci.yaml  release-plz.yaml
crates/format/: Cargo.toml  build.rs
crates/format/schema/: FORMAT.md  core.fbs
crates/format/src/: builder.rs  reader.rs  vector_space.rs
crates/format/src/tests/: test_utils.rs
crates/metrovector-format/: Cargo.toml  README.md
crates/metrovector-format/examples/: data_types.rs  large_dataset.rs  similarity_search.rs  simple.rs
crates/metrovector-format/schema/: extensions.fbs  index.fbs
crates/metrovector-format/src/: io.rs  lib.rs  reader.rs
examples/: data_types.rs  large_dataset.rs  similarity_search.rs  simple.rs
mvbl/: Cargo.toml
mvbl/src/: errors.rs  lib.rs  spec.rs
schema/: mvf.fbs  types.fbs
src/: builder.rs  errors.rs  io.rs  lib.rs  reader.rs  vector_space.rs
src/tests/: test_utils.rs
src/vector/: dimension.rs  mem.rs  mod.rs
src/vectors/: access.rs  iterator.rs  mem.rs  vector.rs  vector_space.rs
