[package]
name = "metrovector"
version = "0.1.1"
authors = ["thegenem0 <nemethgergo02@gmail.com>"]
description = "A high-performance, compact binary format for storing and querying vector embeddings."
documentation = "https://github.com/thegenem0/metrovector"
edition = "2024"
keywords = ["vector", "search", "similarity", "machine-learning"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thegenem0/metrovector"
rust-version = "1.87.0"

[dependencies]
ahash = "0.8.12"
byteorder = "1.5.0"
crc32fast = "1.4.2"
flatbuffers = "25.2.10"
half = "2.6.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
serde = "1.0.219"
thiserror = "2.0.12"

[build-dependencies]
flatc-rust = "0.2.0"

[dev-dependencies]
libc = "0.2.172"
rand = "0.9.1"
tempfile = "3.20.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "data_types"
path = "examples/data_types.rs"

[[example]]
name = "large_dataset"
path = "examples/large_dataset.rs"

[[example]]
name = "similarity_search"
path = "examples/similarity_search.rs"

