[package]
name = "mvbl"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
anyhow = "1.0.98"
ebml-iterable = { version = "0.6.3", features = ["derive-spec", "futures"] }
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
