[package]
name = "format"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
byteorder = "1.5.0"
crc32fast = "1.4.2"
flatbuffers = "25.2.10"
half = "2.6.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
serde = "1.0.219"
thiserror = "2.0.12"

[build-dependencies]
flatc-rust = "0.2.0"

[dev-dependencies]
tempfile = "3.20.0"
